--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,9 @@
         tools:targetApi="31">
         <activity
             android:name=".UserInfActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SetReminderActivity"
             android:exported="false" />
         <activity
             android:name=".UserInfoActivity"
