--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRM_HealthyApp"
         tools:targetApi="31">
+        <activity
+            android:name=".HealthAdviceActivity"
+            android:exported="false" />
         <activity
             android:name=".UserInfActivity"
             android:exported="false" />
@@ -34,16 +39,16 @@
             android:exported="false" />
         <activity
             android:name=".ActivityListActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".AddUpdateActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".AddUpdateSleepLogActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".SleepLogListActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
