--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,8 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.1.4"
-cardview = "1.0.0" # Thêm dòng này cho phiên bản CardView
+cardview = "1.0.0"
+recyclerview = "1.3.2" # Thêm dòng này cho phiên bản CardView
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -17,7 +18,8 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" } # Thêm dòng này cho CardView
+cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" } # Thêm dòng này cho CardView
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
